# smollm-trainer

./: LICENSE  README.md  gpu_acc_test.py  main.py  pyproject.toml
models/: readme.md
scripts/: config.py  dataset_parser.py  download_model.py  model_info.py  model_train.py
workspace/: raw_train_notes.json  train.jsonl  validation.jsonl
